# rpcx-rs

./: .travis.yml  Cargo.toml  README.md  build.rs  rustfmt.toml
client/: Cargo.toml
client/src/: call.rs  lib.rs  main.rs
examples/client_call_mul/: Cargo.toml
examples/client_call_mul/src/: main.rs
examples/client_call_mul_async/: Cargo.toml
examples/client_call_mul_async/src/: main.rs
examples/etcd/server_mul/: Cargo.toml
examples/etcd/server_mul/src/: main.rs
examples/etcd/xclient_call_mul/: Cargo.toml
examples/etcd/xclient_call_mul/src/: main.rs
examples/mul_model/: Cargo.toml
examples/mul_model/src/: lib.rs
examples/protobuf/client_call_mul/: Cargo.toml
examples/protobuf/client_call_mul/src/: main.rs
examples/protobuf/mul_model_proto/: Cargo.toml  build.rs
examples/protobuf/mul_model_proto/src/: arith.rs  lib.rs
examples/protobuf/server_mul/: Cargo.toml
examples/protobuf/server_mul/src/: main.rs
examples/server_mul/: Cargo.toml
examples/server_mul/src/: main.rs
examples/server_register/: Cargo.toml
examples/server_register/src/: main.rs
examples/xclient_call_mul/: Cargo.toml
examples/xclient_call_mul/src/: main.rs
protocol/: Cargo.toml
protocol/src/: call.rs  lib.rs  message.rs
rpcx/: Cargo.toml  README.md
rpcx/src/: lib.rs
rpcx_client/: Cargo.toml  README.md
rpcx_client/src/: client.rs  discovery.rs  lib.rs  main.rs  selector.rs  xclient.rs
rpcx_derive/: Cargo.toml  README.md
rpcx_derive/src/: lib.rs
rpcx_protocol/: Cargo.toml  README.md
rpcx_protocol/src/: call.rs  error.rs  lib.rs  message.rs
rpcx_rs/: Cargo.toml
rpcx_server/: Cargo.toml  README.md
rpcx_server/src/: lib.rs  main.rs  plugin.rs
test_suite/: Cargo.toml
test_suite/tests/: test_xclient.rs
