[package]
name = "rpcx_protocol"
version = "0.1.0"
authors = ["smallnest <smallnest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4.12"
bitflags = "0.7.0"
byteorder = "1.3.2"
numtoa = "0.2.3"
bincode = "1.1.4"
scopeguard = "1.0.0"
itertools = "0.8.0"
maplit = "1.0.1"
derivative = "1.0.2"
strum = "0.15.0"
strum_macros = "0.15.0"
num-traits = "0.2.8"
enum-primitive-derive = "0.1.2"