[package]
name = "rpcx"
version = "0.2.0"
authors = ["smallnest@gmail.com"]
license = "MIT"
readme = "../README.md"
description = "A rpc/microservice framework."
repository = "https://github.com/smallnest/rpcx-rs"
documentation = "https://docs.rs/rpcx/"
homepage = "https://crates.io/crates/rpcx"
keywords = ["rpc", "network", "microservice"]
categories = ["network-programming"]
autobenches = true
edition = "2018"

[dependencies]
rpcx_protocol =  { version = "0.2.0", path = "../rpcx_protocol" }
rpcx_derive =  { version = "0.2.0", path = "../rpcx_derive" }
rpcx_client =  { version = "0.2.0", path = "../rpcx_client" }
rpcx_server =  { version = "0.2.0", path = "../rpcx_server" }