[package]
name = "rpcx_client"
version = "0.1.3"
authors = ["smallnest@gmail.com"]
license = "MIT"
readme = "README.md"
description = "A rpc/microservice framework."
repository = "https://github.com/smallnest/rpcx-rs"
documentation = "https://docs.rs/rpcx-client/"
homepage = "https://crates.io/crates/rpcx-client"
keywords = ["rpc", "network", "microservice"]
categories = ["network-programming"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.28"
evmap = "6.0.0"
rpcx_protocol =  { version = "0.1.3", path = "../rpcx_protocol" }
rpcx_derive =  { version = "0.1.3", path = "../rpcx_derive" }
