[package]
name = "rpcx_client"
version = "0.2.1"
authors = ["smallnest@gmail.com"]
license = "MIT"
readme = "README.md"
description = "A rpc/microservice framework."
repository = "https://github.com/smallnest/rpcx-rs"
documentation = "https://docs.rs/rpcx-client/"
homepage = "https://crates.io/crates/rpcx-client"
keywords = ["rpc", "network", "microservice"]
categories = ["network-programming"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
weighted-rs = "0.1.2"
futures = "0.1.28"
qstring = "0.7.0"
evmap = "6.0.0"
rand = "0.7"
strum = "0.15.0"
strum_macros = "0.15.0"
num-traits = "0.2.8"
enum-primitive-derive = "0.1.2"
jumphash = "0.1.6"
rpcx_protocol =  { version = "0.2.1", path = "../rpcx_protocol" }
rpcx_derive =  { version = "0.2.1", path = "../rpcx_derive" }
