[package]
name = "rpcx_client"
version = "0.3.0"
authors = ["smallnest@gmail.com"]
license = "MIT"
readme = "README.md"
description = "A rpc/microservice framework."
repository = "https://github.com/smallnest/rpcx-rs"
documentation = "https://docs.rs/rpcx-client/"
homepage = "https://crates.io/crates/rpcx-client"
keywords = ["rpc", "network", "microservice"]
categories = ["network-programming"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
weighted-rs = "0.1.2"
futures = "0.3.16"
async-trait = "0.1.50"
tokio = {version = "1.9.0", features = ["full"]}
hyper = "0.14.11"
qstring = "0.7.0"
evmap = "10.0.2"
rand = "0.8.4"
strum = "0.21.0" 
strum_macros = "0.21.1"
num-traits = "0.2.8"
enum-primitive-derive = "0.2.1"
jumphash = "0.1.6"
rpcx_protocol =  { version = "0.3.0", path = "../rpcx_protocol" }
rpcx_derive =  { version = "0.3.0", path = "../rpcx_derive" }
