[package]
name = "rpcx_derive"
version = "0.1.0"
authors = ["smallnest <smallnest@gmail.com>"]
edition = "2018"

[dependencies]
syn = "0.15"
quote = "0.6"
serde = { version = "1.0.98",features = ["derive"]}
serde_json = "1.0.40" 
rmp-serde = "0.13.7"
rpcx_protocol =  { path = "../rpcx_protocol" }

[lib]
proc-macro = true