[package]
name = "rpcx_derive"
version = "0.1.0"
authors = ["smallnest@gmail.com"]
license = "MIT"
readme = "README.md"
description = "A rpc/microservice framework."
repository = "https://github.com/smallnest/rpcx-derive"
documentation = "https://docs.rs/rpcx-derive/"
homepage = "https://crates.io/crates/rpcx-derive"
keywords = ["rpc", "network", "microservice"]
categories = ["network-programming"]
edition = "2018"

[dependencies]
syn = "0.15"
quote = "0.6"
serde = { version = "1.0.98",features = ["derive"]}
serde_json = "1.0.40" 
rmp-serde = "0.13.7"
rpcx_protocol =  { path = "../rpcx_protocol" }

[lib]
proc-macro = true