[package]
name = "rpcx_derive"
version = "0.3.0"
authors = ["smallnest@gmail.com"]
license = "MIT"
readme = "README.md"
description = "A rpc/microservice framework."
repository = "https://github.com/smallnest/rpcx-derive"
documentation = "https://docs.rs/rpcx-derive/"
homepage = "https://crates.io/crates/rpcx-derive"
keywords = ["rpc", "network", "microservice"]
categories = ["network-programming"]
edition = "2018"

[dependencies]
syn = "0.15"
quote = "0.6"
rpcx_protocol =  { version = "0.3.0", path = "../rpcx_protocol" }

[lib]
proc-macro = true