[package]
name = "rpcx_protocol"
version = "0.1.0"
authors = ["smallnest@gmail.com"]
license = "MIT"
readme = "README.md"
description = "A rpc/microservice framework."
repository = "https://github.com/smallnest/rpcx-rs"
documentation = "https://docs.rs/rpcx-protocol/"
homepage = "https://crates.io/crates/rpcx-protocol"
keywords = ["rpc", "network", "microservice"]
categories = ["network-programming"]
autobenches = true
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bytes = "0.4.12"
# bitflags = "0.7.0"
# numtoa = "0.2.3"
# bincode = "1.1.4"
# scopeguard = "1.0.0"
# itertools = "0.8.0"
# maplit = "1.0.1"
# derivative = "1.0.2"
byteorder = "1.3.2"
strum = "0.15.0"
strum_macros = "0.15.0"
num-traits = "0.2.8"
enum-primitive-derive = "0.1.2"
tokio = "0.1.22"
futures = "0.1.28"
serde = { version = "1.0.98",features = ["derive"]}
serde_json = "1.0.40"