[package]
name = "rpcx_protocol"
version = "0.3.0"
authors = ["smallnest@gmail.com"]
license = "MIT"
readme = "README.md"
description = "A rpc/microservice framework."
repository = "https://github.com/smallnest/rpcx-rs"
documentation = "https://docs.rs/rpcx-protocol/"
homepage = "https://crates.io/crates/rpcx-protocol"
keywords = ["rpc", "network", "microservice"]
categories = ["network-programming"]
autobenches = true
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bitflags = "0.7.0"
# numtoa = "0.2.3"
# bincode = "1.1.4"
# scopeguard = "1.0.0"
# itertools = "0.8.0"
# maplit = "1.0.1"
# derivative = "1.0.2"
byteorder = "1.3.2"
strum = "0.21.0"
strum_macros = "0.21.1"
num-traits = "0.2.8"
enum-primitive-derive = "0.1.2"
tokio = "1.9.0"
futures = "0.3.16"
serde = { version = "1.0.126",features = ["derive"]}
serde_json = "1.0.40"
bytes = "1.0.1"
flate2 = "1.0"