[package]
name = "rpcx_server"
version = "0.1.0"
authors = ["smallnest@gmail.com"]
license = "MIT"
readme = "README.md"
description = "A rpc/microservice framework."
repository = "https://github.com/smallnest/rpcx-rs"
documentation = "https://docs.rs/rpcx-server/"
homepage = "https://crates.io/crates/rpcx-server"
keywords = ["rpc", "network", "microservice"]
categories = ["network-programming"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]