[package]
name = "rpcx_server"
version = "0.2.1"
authors = ["smallnest@gmail.com"]
license = "MIT"
readme = "README.md"
description = "A rpc/microservice framework."
repository = "https://github.com/smallnest/rpcx-rs"
documentation = "https://docs.rs/rpcx-server/"
homepage = "https://crates.io/crates/rpcx-server"
keywords = ["rpc", "network", "microservice"]
categories = ["network-programming"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.62"
num_cpus = "1.0"
scoped_threadpool = "0.1.9"
serde = { version = "1.0.98",features = ["derive"]}
serde_json = "1.0.40" 
rmp-serde = "0.13.7"
rpcx_protocol =  { version = "0.2.1", path = "../rpcx_protocol" }
rpcx_derive =  { version = "0.2.1", path = "../rpcx_derive" }