[package]
name = "test_suite"
version = "0.2.1"
authors = ["smallnest <smallnest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
libc = "0.2.62"
rpcx =  { version = "0.2.1", path = "../rpcx" }
mul_model =  { version = "0.2.1", path = "../examples/mul_model" }