[package]
name = "client_call_mul"
version = "0.1.0"
authors = ["smallnest <smallnest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.1.22"
futures = "0.1.28"
serde = { version = "1.0.98",features = ["derive"]}
serde_json = "1.0.40" 
rmp-serde = "0.13.7"
rpcx_protocol =  { version = "0.1.0", path = "../../rpcx_protocol" }
rpcx_derive =  { version = "0.1.0", path = "../../rpcx_derive" }
rpcx_client =  { version = "0.1.0", path = "../../rpcx_client" }