[package]
name = "client_call_mul"
version = "0.1.3"
authors = ["smallnest <smallnest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpcx =  { version = "0.1.3", path = "../../rpcx" }
mul_model =  { version = "0.1.3", path = "../mul_model" }