[package]
name = "client_call_mul_async"
version = "0.1.0"
authors = ["smallnest <smallnest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.28"
rpcx_protocol =  { path = "../../rpcx_protocol" }
rpcx_derive =  { path = "../../rpcx_derive" }
rpcx_client =  { path = "../../rpcx_client" }
mul_model =  { version = "0.1.0", path = "../mul_model" }