[package]
name = "client_call_mul_async"
version = "0.1.0"
authors = ["smallnest <smallnest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.28"
rpcx =  { version = "0.1.1", path = "../../rpcx" }
mul_model =  { version = "0.1.0", path = "../mul_model" }