[package]
name = "client_call_mul_async"
version = "0.3.0"
authors = ["smallnest <smallnest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.16"
tokio = { version = "1.9.0", features = ["full"] }
rpcx =  { version = "0.3.0", path = "../../rpcx" }
mul_model =  { version = "0.3.0", path = "../mul_model" }