[package]
name = "mul_model"
version = "0.1.0"
authors = ["smallnest <smallnest@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.98",features = ["derive"]}
serde_json = "1.0.40" 
rmp-serde = "0.13.7"
rpcx_protocol =  { version = "0.1.0", path = "../../rpcx_protocol" }
rpcx_derive =  { version = "0.1.0", path = "../../rpcx_derive" }