[package]
name = "server_mul"
version = "0.1.0"
authors = ["smallnest <smallnest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpcx_protocol =  { version = "0.1.0", path = "../../rpcx_protocol" }
rpcx_server =  { version = "0.1.0", path = "../../rpcx_server" }
mul_model =  { version = "0.1.0", path = "../mul_model" }