[package]
name = "server_service"
version = "0.2.2"
authors = ["smallnest <smallnest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpcx =  { version = "0.2.2", path = "../../rpcx" }
mul_model =  { version = "0.2.2", path = "../mul_model" }