[package]
name = "mul_model_proto"
version = "0.2.0"
authors = ["smallnest <smallnest@gmail.com>"]
edition = "2018"

[features] 
default = []

[dependencies]
protobuf = "2.8.0"
rpcx =  { version = "0.2.0", path = "../../../rpcx" }

[build-dependencies]
protoc-rust = "2.8.0"
protobuf-codegen-pure = "2.3"